# OOP

./: .gitignore  CMakeLists.txt  README.md  figure.h  main.cpp  point.cpp  point.h  rectangle.h  square.cpp  square.h  trapezoid.cpp  variant.json
lab0.1/: CMakeLists.txt  lab1.docx  main.cpp  test_01.txt  test_02.txt
lab0.2/: CMakeLists.txt  lab2.docx  main.cpp
lab1/: CMakeLists.txt  figure.h  lab3.docx  main.cpp  rectangle.cpp  rectangle.h  square.cpp  square.h  trapezoid.cpp  trapezoid.h  variant.txt
lab2/: TVector.cpp  TVector.h  TVectorItem.h  figure.h  lab4.docx  main.cpp  rectangle.cpp  rectangle.h  square.cpp  square.h  trapezoid.cpp  trapezoid.h  vector.cpp  vector.h
lab3/: TVector.cpp  TVector.h  TVectorItem.cpp  TVectorItem.h  lab5.docx  main.cpp  point.cpp  rectangle.cpp  rectangle.h  square.cpp  square.h  trapezoid.cpp  trapezoid.h
lab4/: CMakeLists.txt  TVector.cpp  TVector.h  TVectorItem.cpp  TVectorItem.h  lab6.docx  main.cpp  point.h  square.h
lab5/: CMakeLists.txt  TVector.h  figure.h  lab7.docx  main.cpp  square.cpp  titerator.h
lab6/: CMakeLists.txt  HListItem.cpp  HListItem.h  TLinkedList.cpp  TLinkedList.h  TVector.h  lab8.docx  main.cpp  point.cpp  point.h  square.cpp  square.h  titerator.h
